# optima

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: 0_robots.rs  1_robot_configurations.rs  2_robot_sets.rs  3_robot_set_configurations.rs  4_joint_states.rs  5_forward_kinematics.rs  6_jacobians.rs  7_robot_geometric_shape_scene.rs  8_intersection_checking.rs  _motion_ik.rs  _static_ik.rs
src/: lib.rs
src/inverse_kinematics/: mod.rs
src/nonlinear_optimization/: mod.rs
src/optima_bevy/: mod.rs  plugins.rs  scripts.rs
src/optima_bevy/optima_bevy_utils/: camera.rs  egui.rs  engine.rs  generic_item.rs  gui.rs  lights.rs  materials.rs  mod.rs  robot_scenes.rs  robots.rs  splines.rs  transform.rs  viewport_visuals.rs  window.rs
src/optima_tensor_function/: mod.rs  robotics_functions.rs  standard_functions.rs
src/optima_tensor_functions/: mod.rs  robotics_functions.rs
src/optimization/: mod.rs
src/robot_modules/: mod.rs  robot.rs  robot_configuration_generator_module.rs  robot_configuration_module.rs  robot_dof_module.rs  robot_file_manager_module.rs  robot_fk_module.rs  robot_forward_kinematics_module.rs  robot_geometric_shape_module.rs  robot_joint_state_module.rs  robot_kinematics_module.rs  robot_mesh_file_manager_module.rs  robot_model_module.rs  robot_preprocessing_module.rs  robot_shape_geometry_module.rs  robot_state_module.rs
src/robot_set_modules/: mod.rs  robot_set.rs  robot_set_configuration_module.rs  robot_set_fk_module.rs  robot_set_geometric_shape_module.rs  robot_set_joint_state_module.rs  robot_set_kinematics_module.rs  robot_set_mesh_file_manager_module.rs
src/scenes/: mod.rs  robot_geometric_shape_scene.rs  scene_descriptor.rs
src/utils/: mod.rs
src/utils/utils_algorithms/: mod.rs
src/utils/utils_collision/: mod.rs
src/utils/utils_combinations/: mod.rs
src/utils/utils_console/: mod.rs
src/utils/utils_console_output/: mod.rs
src/utils/utils_enums/: mod.rs
src/utils/utils_errors/: mod.rs
src/utils/utils_files/: mod.rs  optima_path.rs
src/utils/utils_generic_data_structures/: mod.rs
src/utils/utils_generics/: mod.rs
src/utils/utils_math/: finite_difference.rs  geometry.rs  interpolation.rs  mod.rs  vector.rs
src/utils/utils_nalgebra/: conversions.rs
src/utils/utils_optima_tensor_functions/: mod.rs  optima_tensor.rs
src/utils/utils_robot/: joint.rs  joint_state_window_memory_container.rs  link.rs  mod.rs  robot_generic_structures.rs  robot_module_utils.rs  robot_set_link_specification.rs  robot_set_module_utils.rs  urdf_joint.rs  urdf_link.rs
src/utils/utils_sampling/: mod.rs
src/utils/utils_se3/: homogeneous_matrix.rs  implicit_dual_quaternion.rs  mod.rs  optima_rotation.rs  optima_se3_pose.rs  rotation_and_translation.rs
src/utils/utils_shape_geometry/: geometric_shape.rs  geometric_shape_collection.rs  geometric_shape_list.rs  mod.rs  shape_collection.rs  trimesh_engine.rs
src/utils/utils_splines/: mod.rs
src/utils/utils_traits/: mod.rs
src/utils/utils_wasm/: mod.rs
