[package]
name = "optima"
version = "0.0.1"
edition = "2021"
description = "An easy to set up and easy to use toolbox for applied planning and optimization"
keywords = ["robotics", "planning", "optimization", "motion", "kinematics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/djrakita/optima_toolbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version="0.30.1", features=["serde-serialize"]}
serde = "1.0.136"
serde_json = "1.0.79"
# termion = "1.5.6"
urdf-rs = "0.6.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.79"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.16.2", features = ["extension-module"] }

[lib]
name = "optima"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3