[package]
name = "optima"
version = "0.0.1"
edition = "2021"
description = "An easy to set up and easy to use toolbox for applied planning and optimization"
keywords = ["robotics", "planning", "optimization", "motion", "kinematics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/djrakita/optima_toolbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version="0.30.1", features=["serde-serialize"]}
serde = "1.0.136"
serde_json = "1.0.79"
urdf-rs = "0.6.2"
# vfs = {version="0.6.2", features=["embedded-fs"], optional = true}
vfs = { git = "https://github.com/manuel-woelker/rust-vfs", rev = "40fe15a947479054d98b8303f11db123ffd723cc", features=["embedded-fs"], optional = true }
rust-embed = { version="6.2.0", features=["debug-embed", "interpolate-folder-path", "compression", "include-exclude"], optional = true}
dae-parser = "0.8.5"
stl_io = "0.6.0"
walkdir = "2.3.2"
dirs = "4.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.79"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { version = "0.16.2", features = ["extension-module"] }
termion = "1.5.6"

[features]
default = ["embed_robots_group_1"]
do_not_embed_anything = []
do_not_embed_any_robot_data = []
do_not_embed_robot_meshes = []
embed_all_robots = ["embed_robots_group_3"]
embed_robots_group_3 = ["embed_robots_group_2"]
embed_robots_group_2 = ["embed_robots_group_1"]
embed_robots_group_1 = ["ur5", "sawyer"]
ur5 = ["vfs", "rust-embed"]
sawyer = ["vfs", "rust-embed"]


[lib]
name = "optima"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "wasm32-unknown-unknown"]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3